--- a/respo/config-client-dev.properties
+++ b/respo/config-client-dev.properties
@@ -1,6 +1,6 @@
 
-foo = foo version 21
-# client-config = client-config version 21
+# foo = foo version 21
+client-config = client-config version 21
 democonfigclient.message=hello spring io
 
 # routes to serviceId
